update personalization & add task

--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
     - https://twitter.com/username # change to your Twitter homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - www.linkedin.com/in/hanifahatthahirabasir
+    # - www.linkedin.com/in/hanifahatthahirabasir
 
 # Site Verification Settings
 webmaster_verifications:
